feat: add openapi docs